add selector an hedders

--- a/CSS/selectors.html
+++ b/CSS/selectors.html
@@ -2,9 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Selectors</title>
+    <title>CSS Rules</title>
+    <style>
+        h1{
+            color: red;
+        }
+        h2{
+            color: green;
+            font-size: 40px;
+        }
+        h3{
+            /*border property's*/
+            border: 1px dashed #ca1010;
+            color: red;
+        }
+
+        #h3Costom{
+            font-family: "A Malathi.";
+        }
+    </style>
 </head>
 <body>
 
+<h1>Change me to red</h1>
+<h1>Change me to red</h1>
+<h1>Change me to red</h1>
+<h2>Change me to green & set font size 40px</h2>
+<h2>Change me to green  & set font size 40px</h2>
+<h2>Change me to green  & set font size 40px</h2>
+
+<h3>Set me a red border</h3>
+<h3 id="h3Costom">Set me a red border & change the font to ubuntu</h3>
 </body>
 </html>
