add naming in selctors

--- a/CSS/selectors.html
+++ b/CSS/selectors.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>CSS Rules</title>
     <style>
+        /*h1 is type selector*/
         h1{
             color: red;
         }
@@ -16,9 +17,14 @@
             border: 1px dashed #ca1010;
             color: red;
         }
-
+        /*#h3Costom is id selector*/
         #h3Costom{
             font-family: "A Malathi.";
+        }
+        /*.custom is class selector*/
+        .custom{
+            color: green;
+            text-transform: capitalize;
         }
     </style>
 </head>
