add google fonts

--- a/CSS/selectors.html
+++ b/CSS/selectors.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <title>CSS Rules</title>
     <style>
@@ -16,10 +20,11 @@
             /*border property's*/
             border: 1px dashed #ca1010;
             color: red;
+            text-align: center;
         }
         /*#h3Costom is id selector*/
         #h3Costom{
-            font-family: "A Malathi.";
+            font-family: 'PT Sans Narrow', sans-serif;
         }
         /*.custom is class selector*/
         .custom{
