add id selector

--- a/CSS/selectors.html
+++ b/CSS/selectors.html
@@ -28,9 +28,8 @@
             color: red;
             text-align: center;
         }
-        /*#h3Costom is id selector*/
+        /*#h3Costom is id selector unique style adding !*/
         #h3Costom{
-            font-family: 'DM Sans', sans-serif;
             font-family: 'PT Sans Narrow', sans-serif;
         }
         /*.custom is class selector*/
@@ -41,6 +40,10 @@
 
         .material-symbols-outlined{
             color: #0a53be;
+            font-size: 15px;
+            width: 175px;
+            height: 50px;
+            border-radius: 15px;
         }
 
     </style>
@@ -59,7 +62,7 @@
 
 <span class="material-symbols-outlined">
 airplanemode_active
-</span>
+</span><br>
 
 <button class="material-symbols-outlined"> click me airplanemode_active</button>
 </body>
