--- a/CSS/Case 1.html
+++ b/CSS/Case 1.html
@@ -5,6 +5,7 @@
     <title>Case 1</title>
 
     <style>
+        /*class selector always start . dot*/
         .hedderClass1{
             color: red;
             font-size: 100px;
@@ -15,7 +16,7 @@
             color: green;
             font-size: 50px;
         }
-
+        /*id selector always start # hash*/
         #orange{
             background-color: orange;
             text-align: center;
