add universal selector

--- a/CSS/assets/Case 2.html
+++ b/CSS/assets/Case 2.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Case 2</title>
     <style>
-        body{
+        /*universal selector*/
+        *{
             color: red;
         }
         #a{
