add attribute selector

--- a/CSS/Case 2.html
+++ b/CSS/Case 2.html
@@ -8,13 +8,12 @@
         *{
             color: red;
         }
-        #a{
+
+        /*attribute selector*/
+        [id]{
             font-size: 80px;
         }
 
-        #b{
-            font-size: 80px;
-        }
     </style>
 </head>
 <body>
