add narrow down selector

--- a/HTML/Case 4(text content).html
+++ b/HTML/Case 4(text content).html
@@ -7,9 +7,9 @@
 <body>
   <ul>
 <!--                    relative parts-->
-    <li>A - <a href="../assets/doc1/download/a.pdf" download="a.pdf"> Download a.pdf</a></li>
-    <li>B - <a href="../assets/doc1/download/b.pdf" download="b.pdf">Download b.pdf</a></li>
-    <li>C -<a href="../assets/doc1/download/c.pdf" download="c.pdf">C - Download c.pdf</a></li>
+    <li>A - <a href="assets/doc1/download/a.pdf" download="a.pdf"> Download a.pdf</a></li>
+    <li>B - <a href="assets/doc1/download/b.pdf" download="b.pdf">Download b.pdf</a></li>
+    <li>C -<a href="assets/doc1/download/c.pdf" download="c.pdf">C - Download c.pdf</a></li>
 
   </ul>
 </body>
