--- a/HTML/Test.html
+++ b/HTML/Test.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-   <button class="button" onclick="alert()" style="font-size: small"><span><img src="../assets/images/git.gif"></span></button>
+   <button class="button" onclick="alert()" style="font-size: small"><span><img src="assets/images/git.gif"></span></button>
    <button class="button"><span>click</span></button>
    <button class="button"><span>Hover </span></button><br>
 
