--- a/CSS/Case 2.html
+++ b/CSS/Case 2.html
@@ -14,6 +14,11 @@
             font-size: 80px;
         }
 
+        /*narrow down selector*/
+        [id='a']{
+            font-size: 80px;
+        }
+
     </style>
 </head>
 <body>
