--- a/CSS/selectors.html
+++ b/CSS/selectors.html
@@ -14,6 +14,12 @@
     <meta charset="UTF-8">
     <title>CSS Rules</title>
     <style>
+        /*id selector*/
+        /*element selector*/
+        /*class selector*/
+        /*universal selector*/
+        /*attribute selector*/
+
         /*h1 is type selector*/
         h1{
             color: red;
