add pseudo classes

--- a/CSS/Case 3.html
+++ b/CSS/Case 3.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Case 3</title>
+    <title>Pseudo classes</title>
+    <style>
+        h1:hover{
+            color: red;
+            text-align: center;
+        }
+
+    </style>
 </head>
 <body>
-
+    <h1>start</h1>
 </body>
 </html>
