--- a/CSS/selectors.html
+++ b/CSS/selectors.html
@@ -24,6 +24,11 @@
         h1{
             color: red;
         }
+
+        h1:hover{
+            color: #24dc8b;
+        }
+
         h2{
             color: green;
             font-size: 40px;
@@ -50,6 +55,12 @@
             width: 175px;
             height: 50px;
             border-radius: 15px;
+        }
+
+        button:hover{
+            background-color: #0a53be;
+            color: white;
+            border-radius: 50px;
         }
 
     </style>
