--- a/CSS/Case 3.html
+++ b/CSS/Case 3.html
@@ -44,13 +44,12 @@
         }
 
         h3:before{
-            content: '@';
+            content: "😐";
         }
+
         h3:after{
-            content: '#';
+            content: "💗";
         }
-
-
 
     </style>
 </head>
@@ -76,6 +75,10 @@
     <h1>B  -  select</h1>
     <h1>C</h1>
 </section>
+
+<p style="font-size:48px">
+    &#128512; &#128516; &#128525; &#128151;
+</p>
 
 </body>
 </html>
