--- a/CSS/Case 3.html
+++ b/CSS/Case 3.html
@@ -44,13 +44,21 @@
         }
 
         h3:before{
-            content: "😐";
+            content: "👻";
         }
 
         h3:after{
             content: "💗";
         }
 
+        h4:active{
+            color: red;
+            font-size: 20px;
+        }
+
+        a:visited{
+            color: yellow;
+        }
     </style>
 </head>
 <body>
@@ -79,6 +87,11 @@
 <p style="font-size:48px">
     &#128512; &#128516; &#128525; &#128151;
 </p>
+
+<h4>is active</h4>
+<h4>is visited</h4>
+
+<a href="Case%203.html">sample</a>
 
 </body>
 </html>
