--- a/CSS/Pseudo element.html
+++ b/CSS/Pseudo element.html
@@ -10,6 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <style>
 
+        input{
+            background-color: #e6c2c2;
+            height: 30px;
+            border-radius: 10px 15px;
+            border-color: #8cec77;
+        }
+
         p::first-line {
             color: red;
         }
