add combination usage !

--- a/CSS/Combinators.html
+++ b/CSS/Combinators.html
@@ -10,7 +10,8 @@
             text-align: center;
         }
 
-        .con h1{
+        /*combination usage*/
+        .con h1::first-letter{
             color: #0a58ca;
         }
     </style>
@@ -18,13 +19,13 @@
 <body>
 <h1>outer h1</h1>
 
-<section class="con">
-    <h1>im inner h1 !</h1>
-</section>
+        <section class="con">
+            <h1>Im inner h1 !</h1>
+        </section>
 
-<section>
-    <h1>im h1 in section 2 !</h1>
-</section>
+        <section>
+            <h1>Im h1 in section 2 !</h1>
+        </section>
 
 </body>
 </html>
