--- a/CSS/Combinators.html
+++ b/CSS/Combinators.html
@@ -5,13 +5,13 @@
     <title>Combinators</title>
 
     <style>
-        section h1 {
+        section>h1 {
             color: red;
             text-align: center;
         }
 
         /*combination usage*/
-        .con h1::first-letter{
+        .con>h1::first-letter{
             color: #0a58ca;
         }
     </style>
