add Descendant comination

--- a/CSS/Combinators.html
+++ b/CSS/Combinators.html
@@ -5,15 +5,21 @@
     <title>Combinators</title>
 
     <style>
-        section>h1 {
+
+        /*Descendant combinator*/
+
+        section h1 {
             color: red;
             text-align: center;
         }
 
+        /*Descendant combinator*/
         /*combination usage*/
-        .con>h1::first-letter{
+
+        .con h1::first-letter{
             color: #0a58ca;
         }
+
     </style>
 </head>
 <body>
