add combination in siblings

--- a/CSS/Combinators4.html
+++ b/CSS/Combinators4.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <p>sample paragraph</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur esse facilis, neque quae quia similique? Aspernatur aut earum est impedit laboriosam quos rerum sit voluptatem. Perspiciatis quasi reiciendis repellendus repudiandae.</p>
 
   <h1>h1 1</h1>
   <h1>h1 2</h1>
@@ -20,6 +20,17 @@
   <h1>h1 4</h1>
   <h1>h1 5</h1>
   <h2>im h2</h2>
+
+  <div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias asperiores assumenda cumque debitis dolorum ea, est fugit harum, magnam modi nulla pariatur perspiciatis placeat quia quisquam reprehenderit tempora vero voluptates.</p>
+
+    <h1>div h1 1</h1>
+    <h1>div h1 2</h1>
+    <h1>div h1 3</h1>
+    <h1>div h1 4</h1>
+    <h1>div h1 5</h1>
+    <h2>div im h2</h2>
+  </div>
 
 </body>
 </html>
