add sibling combinators

--- a/CSS/Combinators4.html
+++ b/CSS/Combinators4.html
@@ -22,7 +22,11 @@
   <h2>im h2</h2>
 
   <div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias asperiores assumenda cumque debitis dolorum ea, est fugit harum, magnam modi nulla pariatur perspiciatis placeat quia quisquam reprehenderit tempora vero voluptates.</p>
+    <p>
+      Lorem ipsum dolor sit amet, consecrate radicalising elite. Alias aspersions
+      assume cumquat debits doldrums ea, est fugit harm, magnum mod null paginator perspicacity
+      place qua squamous reprehend temporal vero voluptuous.
+    </p>
 
     <h1>div h1 1</h1>
     <h1>div h1 2</h1>
