--- a/CSS/Task 2.html
+++ b/CSS/Task 2.html
@@ -6,7 +6,11 @@
 
     <style>
         body main section:nth-child(5)>section>aside>ul>li:nth-child(3)>ol>li:nth-child(2){
-            color: red;
+            color: orange;
+        }
+        hr{
+            background-color: #2482ec;
+            height: 5px;
         }
     </style>
 </head>
