--- a/CSS/satart.html
+++ b/CSS/satart.html
@@ -15,6 +15,6 @@
 
     <p style="color: #0a53be; font-size: 100px">inline CSS</p>
     <h1 style="color: #0a53be; font-size: 100px">Style CSS</h1>
-    <a href="index.html">click hear </a>
+    <a href="satart.html">click hear </a>
 </body>
 </html>
