--- a/CSS/Task 2.html
+++ b/CSS/Task 2.html
@@ -9,7 +9,7 @@
             color: orange;
         }
         hr{
-            background-color: #2482ec;
+            background-color: #0a58ca;
             height: 5px;
         }
     </style>
