--- a/CSS/Cascade.html
+++ b/CSS/Cascade.html
@@ -4,33 +4,29 @@
     <meta charset="UTF-8">
     <title>Cascade</title>
     <style>
-
-
-
-
-
+        *{
+            color: black;
+        }
+        h1{
+            color: blue;
+        }
         #h1ID{
             color: deeppink;
         }
 
+
+
         :first-child{
             color: green;
-        }
-
-        [id]{
-            color: brown;
         }
 
         .h1Class{
             color: orange;
         }
 
-        h1{
-            color: blue;
-        }
-
-        *{
-            color: black;
+        /*attribute selector*/
+        [id]{
+            color: brown;
         }
 
     </style>
