--- a/CSS/Cascade.html
+++ b/CSS/Cascade.html
@@ -10,32 +10,39 @@
         h1{
             color: blue;
         }
+
         #h1ID{
             color: deeppink;
         }
 
-
-
         :first-child{
-            color: green;
+            color: green ;
         }
 
         .h1Class{
             color: orange;
         }
 
+        /*:first-child{
+            color: green !important;
+        }
+
+        .h1Class{
+            color: orange !important;
+        }*/
+
         /*attribute selector*/
         [id]{
             color: brown;
         }
+
+
 
     </style>
 </head>
 <body>
 
 <h1 id="h1ID" class="h1Class" style="color:red;">So What is Cascade.?</h1>
-
-
 
 </body>
 </html>
