--- a/CSS/Cascade test 2.html
+++ b/CSS/Cascade test 2.html
@@ -5,7 +5,8 @@
     <title>Cascade Task Three</title>
     <style>
 
-        /*1+100+1+1+10+100+1+1+1+1+1 = 218*/
+        /*1+100+1+1+10+100+1+1+1+1+1 = 216*/
+        /*#main = 100*/
         body#body>section.mainClass#main>section>div+div>h1{
             color: red;
         }
@@ -15,23 +16,18 @@
             color: deeppink;
         }
 
-        /*1+10+100+1+1+100+1+10+1+10+100+1+1+10+100+10+1+100+10+10+1+100+10 = 679*/
+        /*1+10+100+1+1+100+1+10+1+10+100+1+1+10+100+10+1+100+10+10+1+100+10 = 666*/
         body.bodyClass#body>section#main.mainClass>section.subClass#sub>div.firstDivClass#firstDiv+div#secondDiv.secondDivClass>h1#selectedH1.selectH1Class{
             color: indigo;
         }
-        /*1+10+100+1+1+100+1+1+10+1+10+1+100+10+1+100+10+10 = 468*/
+        /*1+10+100+1+1+100+1+1+10+1+10+1+100+10+1+100+10+10 = 466*/
         body.bodyClass#body>section#main>section.subClass>div.firstDivClass+div#secondDiv>h1#selectedH1.selectH1Class{
             color: skyblue;
         }
-
-        /*100+10 = 110*/
+        /*100+10 = 100*/
         #selectedH1{
             color: magenta;
         }
-
-
-
-
 
     </style>
 </head>
