add : cascading value

--- a/CSS/Cascade test 2.html
+++ b/CSS/Cascade test 2.html
@@ -13,10 +13,10 @@
 
         /*1+1+1+1+1+1 = 6*/
         body>section>section>div+div>h1{
-            color: deeppink;
+            color: deeppink !important;
         }
 
-        /*1+10+100+1+1+100+1+10+1+10+100+1+1+10+100+10+1+100+10+10+1+100+10 = 666*/
+        /*1+10+100+1+1+100+1+10+1+10+100+1+1+10+100+10+1+100+10+10+1+100+10 = 666 */
         body.bodyClass#body>section#main.mainClass>section.subClass#sub>div.firstDivClass#firstDiv+div#secondDiv.secondDivClass>h1#selectedH1.selectH1Class{
             color: indigo;
         }
