--- a/CSS/Task 3.html
+++ b/CSS/Task 3.html
@@ -9,19 +9,22 @@
     body>section{
       width: 600px;
       height: 300px;
-      border: 2px solid #ba9ddc;
-      background-color: #ba9ddc;
+      border: 2px solid #cfb0e1;
+      background-color: #beb5d3;
       margin-left: 150px;
+      padding-top: 170px;
+      padding-left: 60px;
+      padding-right: 20px;
+      box-sizing: border-box;
     }
 
     body>section>p{
-      width: 500px;
-      height: 100px;
-      border: 2px solid red;
-      margin-top: 180px;
-      margin-left: 80px;
-      background-color: #e6b2b2;
-
+      /*width: 500px;
+      height: 100px;*/
+      border: 2px solid #1544ff;
+      /*margin-top: 180px;
+      margin-left: 80px;*/
+      background-color: #deadad;
     }
 
     body>section>h1:nth-child(4){
@@ -39,7 +42,7 @@
     }
 
     body>h1:nth-child(3){
-      margin-top: 50px;
+      margin-top: 100px;
       margin-left:100px;
     }
 
