add : opasity in integer meshement

--- a/CSS/Task 4.html
+++ b/CSS/Task 4.html
@@ -43,6 +43,30 @@
       margin-left: 300px;
       background-color: #8cc5d1;
     }
+
+    body div:nth-child(5){
+      box-sizing: border-box;
+      border-radius: 10px;
+      border: 1px solid #8cec77;
+      width: 400px;
+      height: 400px;
+      margin-top: 100px;
+      margin-left: 200px;
+      padding: 0px;
+      background-color: #8cec77;
+    }
+
+    body div:nth-child(5)>div{
+      box-sizing: border-box;
+      border-radius: 100%;
+      border: 1px solid #b88be5;
+      width: 400px;
+      height: 400px;
+      margin-top: 0px;
+      margin-left: 0px;
+      background : linear-gradient(to left,red, #9aa4ff);
+      opacity: 0.8; /*use number masheent*/
+    }
   </style>
 </head>
 <body>
@@ -50,5 +74,9 @@
   <div></div>
   <div></div>
   <div></div>
+  <div>
+    <div></div>
+  </div>
+
 </body>
 </html>
