--- a/CSS/Task 5.html
+++ b/CSS/Task 5.html
@@ -24,7 +24,7 @@
       width: 100px;
       height: 100px;
       border-radius: 100%;
-      margin-left: 250px;
+      margin-left: 10vw;
       background-color: #eca0c1;
     }
   </style>
