--- a/CSS/O8_CSS_Positions/position.html
+++ b/CSS/O8_CSS_Positions/position.html
@@ -5,10 +5,6 @@
     <title>position</title>
     <style>
 
-        section{
-            margin-right: 300px;
-        }
-
         div{
             display: inline-block;
         }
@@ -22,6 +18,18 @@
             height: 100px;
             border-radius: 100%;
             background: linear-gradient(to left,red, #9aa4ff);
+        }
+
+        body section img:nth-child(4){
+            position: relative;
+            top: 500px;
+            left: 800px;
+
+        }
+
+        body section img:nth-child(1){
+            position: relative;
+            top: 40px;
         }
     </style>
 </head>
