--- a/CSS/O8_CSS_Positions/position.html
+++ b/CSS/O8_CSS_Positions/position.html
@@ -7,6 +7,7 @@
 
         div{
             display: inline-block;
+            position: relative;
         }
 
         img{
@@ -21,9 +22,9 @@
         }
 
         body section img:nth-child(4){
-            position: relative;
-            top: 500px;
-            left: 800px;
+            position: absolute;
+            right: 0;
+            bottom: 3px;
 
         }
 
@@ -31,6 +32,7 @@
             position: relative;
             top: 40px;
         }
+
     </style>
 </head>
 <body>
