add margin auto !

--- a/CSS/O8_CSS_Positions/position.html
+++ b/CSS/O8_CSS_Positions/position.html
@@ -23,9 +23,12 @@
 
         body section img:nth-child(4){
             position: absolute;
-            right: 0;
-            bottom: 3px;
-
+            right: 0px;
+            /*bottom: 0px;*/
+            left: 0px;
+            top: 0px;
+            margin: auto;
+            transform: rotate(180deg);
         }
 
         body section img:nth-child(1){
