--- a/CSS/Casses/Case 1.html
+++ b/CSS/Casses/Case 1.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="assets/Css/style.css">
 </head>
 <body>
-
+<!--main 1-->
+      <section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+      </section>
 </body>
 </html>
