add structure on sections !

--- a/CSS/Casses/Case 1.html
+++ b/CSS/Casses/Case 1.html
@@ -5,14 +5,23 @@
     <title>Case 1</title>
   <link rel="stylesheet" href="assets/Css/normalize.css">
   <link rel="stylesheet" href="assets/Css/style.css">
+
 </head>
 <body>
-<!--main 1-->
+
       <section>
         <section></section>
         <section></section>
         <section></section>
         <section></section>
       </section>
+
+      <section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+      </section>
+
 </body>
 </html>
