create circle in the rectangle

--- a/CSS/Casses/Case 1.html
+++ b/CSS/Casses/Case 1.html
@@ -10,17 +10,49 @@
 <body>
 
       <section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section>
+            <div>
+              <div></div>
+            </div>
+        </section>
+        <section>
+          <div>
+            <div></div>
+          </div>
+        </section>
+        <section>
+          <div>
+            <div></div>
+          </div>
+        </section>
+        <section>
+          <div>
+            <div></div>
+          </div>
+        </section>
       </section>
 
       <section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section>
+          <div>
+            <div></div>
+          </div>
+        </section>
+        <section>
+          <div>
+            <div></div>
+          </div>
+        </section>
+        <section>
+          <div>
+            <div></div>
+          </div>
+        </section>
+        <section>
+          <div>
+            <div></div>
+          </div>
+        </section>
       </section>
 
 </body>
