create circle in center !

--- a/CSS/Casses/Case 1.html
+++ b/CSS/Casses/Case 1.html
@@ -34,6 +34,9 @@
               <div></div>
             </div>
           </section>
+          <div>
+            <div></div>
+          </div>
         </section>
 
         <section>
@@ -61,6 +64,9 @@
               <div></div>
             </div>
           </section>
+          <div>
+            <div></div>
+          </div>
       </section>
 
 </body>
