--- a/CSS/Casses/Case 1.html
+++ b/CSS/Casses/Case 1.html
@@ -37,6 +37,9 @@
           <div>
             <div></div>
           </div>
+
+        <div></div>
+        <div></div>
         </section>
 
         <section>
@@ -67,6 +70,9 @@
           <div>
             <div></div>
           </div>
+
+          <div></div>
+          <div></div>
       </section>
 
 </body>
