--- a/CSS/task/Case 3.html
+++ b/CSS/task/Case 3.html
@@ -91,7 +91,7 @@
 <h4>is active</h4>
 <h4>is visited</h4>
 
-<a href="Case%203.html">sample</a>
+<a href="Case 3.html">sample</a>
 
 </body>
 </html>
