--- a/CSS/task/Task 4.html
+++ b/CSS/task/Task 4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Task 4</title>
     <!--remove all default css part !-->
-    <link rel="stylesheet" href="assets/Css/normalize.css">
+    <link rel="stylesheet" href="../assets/Css/normalize.css">
 
   <style>
     body div:nth-child(1){
