--- a/myWorks/index.html
+++ b/myWorks/index.html
@@ -21,45 +21,67 @@
             </defs>
         </svg>
 
-        <div class="bShape">
-            <svg xmlns="http://www.w3.org/2000/svg" width="372" height="357" viewBox="0 0 372 357" fill="none">
-                <g filter="url(#filter0_d_168_74)">
-                    <path d="M20.0262 16H351.026V308C133.525 282 18.001 373.754 20.0262 308V16Z" fill="white"/>
-                </g>
-                <defs>
-                    <filter id="filter0_d_168_74" x="0" y="0" width="371.026" height="356.237" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-                        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
-                        <feOffset dy="4"/>
-                        <feGaussianBlur stdDeviation="10"/>
-                        <feComposite in2="hardAlpha" operator="out"/>
-                        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.41 0"/>
-                        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_168_74"/>
-                        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_168_74" result="shape"/>
-                    </filter>
-                </defs>
-            </svg>
-        </div>
+        <section>
+            <div class="bShape">
+                <svg xmlns="http://www.w3.org/2000/svg" width="372" height="357" viewBox="0 0 372 357" fill="none">
+                    <g filter="url(#filter0_d_168_74)">
+                        <path d="M20.0262 16H351.026V308C133.525 282 18.001 373.754 20.0262 308V16Z" fill="white"/>
+                    </g>
+                    <defs>
+                        <filter id="filter0_d_168_74" x="0" y="0" width="371.026" height="356.237" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                            <feOffset dy="4"/>
+                            <feGaussianBlur stdDeviation="10"/>
+                            <feComposite in2="hardAlpha" operator="out"/>
+                            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.41 0"/>
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_168_74"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_168_74" result="shape"/>
+                        </filter>
+                    </defs>
+                </svg>
+            </div>
 
-        <div class="bShape2">
-            <svg xmlns="http://www.w3.org/2000/svg" width="372" height="357" viewBox="0 0 372 357" fill="none">
-                <g filter="url(#filter0_d_168_74)">
-                    <path d="M20.0262 16H351.026V308C133.525 282 18.001 373.754 20.0262 308V16Z" fill="white"/>
-                </g>
-                <defs>
-                    <filter id="filter0_d_168_74" x="0" y="0" width="371.026" height="356.237" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-                        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
-                        <feOffset dy="4"/>
-                        <feGaussianBlur stdDeviation="10"/>
-                        <feComposite in2="hardAlpha" operator="out"/>
-                        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.41 0"/>
-                        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_168_74"/>
-                        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_168_74" result="shape"/>
-                    </filter>
-                </defs>
-            </svg>
-        </div>
+            <div class="bShape2">
+                <svg xmlns="http://www.w3.org/2000/svg" width="372" height="357" viewBox="0 0 372 357" fill="none">
+                    <g filter="url(#filter0_d_168_74)">
+                        <path d="M20.0262 16H351.026V308C133.525 282 18.001 373.754 20.0262 308V16Z" fill="white"/>
+                    </g>
+                    <defs>
+                        <filter id="filter0_d_168_74" x="0" y="0" width="371.026" height="356.237" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                            <feOffset dy="4"/>
+                            <feGaussianBlur stdDeviation="10"/>
+                            <feComposite in2="hardAlpha" operator="out"/>
+                            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.41 0"/>
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_168_74"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_168_74" result="shape"/>
+                        </filter>
+                    </defs>
+                </svg>
+            </div>
+
+            <div class="bshape3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="372" height="357" viewBox="0 0 372 357" fill="none">
+                    <g filter="url(#filter0_d_168_74)">
+                        <path d="M20.0262 16H351.026V308C133.525 282 18.001 373.754 20.0262 308V16Z" fill="white"/>
+                    </g>
+                    <defs>
+                        <filter id="filter0_d_168_74" x="0" y="0" width="371.026" height="356.237" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                            <feOffset dy="4"/>
+                            <feGaussianBlur stdDeviation="10"/>
+                            <feComposite in2="hardAlpha" operator="out"/>
+                            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.41 0"/>
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_168_74"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_168_74" result="shape"/>
+                        </filter>
+                    </defs>
+                </svg>
+            </div>
+        </section>
 
         <!--<div class="bShape">
             <svg xmlns="http://www.w3.org/2000/svg" width="372" height="357" viewBox="0 0 372 357" fill="none">
