--- a/myWorks/Task7(Randomly).html
+++ b/myWorks/Task7(Randomly).html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <title>Task</title>
 
-
   <style>
+
+      main header i{
+          color: white;
+          box-shadow: 20px 20px 20px #3c58cb;
+      }
+
+      main header i:hover{
+          color: black;
+      }
 
       main header{
           width:50vw;
