add task 7 ann using z index and all positions

--- a/CSS/task/Task 5.html
+++ b/CSS/task/Task 5.html
@@ -5,6 +5,11 @@
     <title>Task | 5</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+
+      *{
+          scroll-behavior: smooth;
+      }
+
     body{
       background-color: #c1f3b6;
     }
