--- a/CSS/new layout/using flex/flex.html
+++ b/CSS/new layout/using flex/flex.html
@@ -6,23 +6,53 @@
 
   <style>
         section{
-          width: 90%;
-          height: 50vh;
-          border: 1px solid red;
-          display: flex;
+            width: 90%;
+            height: 50vh;
+            border: 1px solid red;
+
+            display: flex;
+
+            /*default row*/
+            /*flex-direction: row-reverse;*/ /*reverse row item*/
+            /*flex-direction: column-reverse;*/ /*reverse column item*/
+            /*flex-direction: row;*/ /*display row*/
+            /*flex-direction: column;*/ /*display container in columns*/
+
+            /*working allow using flex*/
+
+           /* align-items: center;
+           y accesses
+                    flex-start
+                    flex-center
+                    flex-end
+
+           * justify-content: center;
+            X accesses
+                    flex-start
+                    flex-center
+                    flex-end
+                    space-around
+                    space-between
+            align-content: center;*/
+
+
+            /*flex has a X -- and Y | accesses*/
         }
 
         section >div{
-          width: calc(100%/3);
-          border: 5px solid green;
+          /*width: calc(100%/3);*/
+            width: 100px;
+            height: 100px;
+            border: 5px solid green;
         }
   </style>
 </head>
 <body>
   <section>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div>A</div>
+    <div>B</div>
+    <div>C</div>
+    <div>d</div>
   </section>
 </body>
 </html>
