--- a/CSS/new layout/using flex/task/task3.html
+++ b/CSS/new layout/using flex/task/task3.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>task 3</title>
   <style>
+
     section{
       height: 70vh;
       display: flex;
@@ -19,7 +20,7 @@
     }
 
     section>div:first-child{
-      align-self: flex-start;
+      align-self: flex-start; /*use it flex items select one by one !*/
     }
 
     section>div:nth-child(2){
