--- a/CSS/new layout/using flex/task/task 4.html
+++ b/CSS/new layout/using flex/task/task 4.html
@@ -31,14 +31,21 @@
     section>div:first-child{
       /*flex-grow: 2;*/ /*manage item width for container scale*/
        /*use it flex items select one by one !*/
-    }
+
+      /*order: 1;*/
+
+      }
 
     section>div:nth-child(2){
       /*flex-grow: 1;*/
+
+      /*order: 1;*/
     }
 
     section>div:last-child{
       /*flex-grow: 3;*/
+
+      /*order: 1;*/
     }
 
   </style>
