add transition delay !

--- a/transition/example 1/example.html
+++ b/transition/example 1/example.html
@@ -24,6 +24,7 @@
             /*transition-property: all;*/
             /*transition-property: width;*/
             /*transition-property: width;*/
+            /*transition-delay: 2s;*/ /*transition start delay set !*/
         }
     </style>
 </head>
