--- a/transition/task/task.html
+++ b/transition/task/task.html
@@ -19,7 +19,8 @@
         margin-top: 20px;
         left: -175px;
         transition-duration: 3s;
-        border-radius: 20px;
+        border-bottom-right-radius: 20px;
+        border-top-right-radius: 20px;
         font-size: 20px;
         color: white;
         justify-content: space-around;
@@ -27,7 +28,7 @@
 
       section>div:hover{
         left: -10px;
-        transition-duration: 3s;
+        transition-duration: 2s;
         background-color: deeppink;
       }
 
