--- a/animation/example 1/fill mode.html
+++ b/animation/example 1/fill mode.html
@@ -29,7 +29,9 @@
 
             animation-delay: 10s;
 
-            animation-fill-mode: backwards; /*start animation before set first frame style add ! */
+            /*animation-fill-mode: backwards;*/ /*start animation before set first frame style add ! */
+
+            animation-fill-mode: both;/*animation start set to first frame animation end to apply last frame*/
         }
 
         section>section:hover{
