--- a/bootstrap-in-class/task/index-2.html
+++ b/bootstrap-in-class/task/index-2.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <main>
-  <div class="container-fluid">
+  <div class="container-fluid bg-light">
     <div class="row align-items-start">
       <div class="col border ">
         <div style="width: 100px; height: 100px" class="rounded-circle bg-danger"></div>
