--- a/bootstrap-in-class/task/index-2.html
+++ b/bootstrap-in-class/task/index-2.html
@@ -5,14 +5,13 @@
     <title>index-2</title>
   <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.css">
   <style>
-    .container{
-      width: 100%;
-    }
+
   </style>
 </head>
 <body>
+<!--always row column architecture used in importance content is container inside to row or columns-->
 <main>
-  <div class="container-fluid bg-light">
+  <div class="container-fluid bg-light border border-black">
     <div class="row align-items-start">
       <div class="col border ">
         <div style="width: 100px; height: 100px" class="rounded-circle bg-danger"></div>
