--- a/bootstrap-in-class/task/task-3.html
+++ b/bootstrap-in-class/task/task-3.html
@@ -13,8 +13,15 @@
 <main>
     <div class="container-fluid bg-light border border-black">
         <div class="row align-items-start">
-            <div class="col border ">
+            <div class="col border position-relative">
+                <div style="width: 100px; height: 100px" class="rounded-circle bg-danger m-auto"></div>
+            </div>
+            <div class="col border">
                 <div style="width: 100px; height: 100px" class="rounded-circle bg-danger"></div>
+            </div>
+            <!--flex property-->
+            <div class="col border d-flex justify-content-center">
+                <div style="width: 100px; height: 100px" class="rounded-circle bg-dark"></div>
             </div>
             <div class="col border">
                 <div style="width: 100px; height: 100px" class="rounded-circle bg-danger"></div>
@@ -22,14 +29,8 @@
             <div class="col border">
                 <div style="width: 100px; height: 100px" class="rounded-circle bg-danger"></div>
             </div>
-            <div class="col border">
-                <div style="width: 100px; height: 100px" class="rounded-circle bg-danger"></div>
-            </div>
-            <div class="col border">
-                <div style="width: 100px; height: 100px" class="rounded-circle bg-danger"></div>
-            </div>
-            <div class="col border">
-                <div style="width: 100px; height: 100px" class="rounded-circle bg-danger"></div>
+            <div class="col border position-relative">
+                <div style="width: 100px; height: 100px" class="rounded-circle bg-danger m-auto"></div>
             </div>
         </div>
     </div>
