--- a/bootstrap-in-class/task/task-4.html
+++ b/bootstrap-in-class/task/task-4.html
@@ -2,17 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>task-4</title>
   <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.css">
 
 </head>
 <body>
 <section class="container-fluid border mt-5">
   <section class="row">
-    <section class="col bg-danger" style="height: 300px"></section>
-    <section class="col-6 bg-primary" style="height: 300px"></section>
-    <section class="col bg-success" style="height: 300px"></section>
+      <!--one row of maximum columns 12-->
+    <section class="col-3 bg-danger" style="height: 300px"></section>
+    <section class="col-3 bg-primary" style="height: 300px"></section>
+    <section class="col-3 bg-success" style="height: 300px"></section>
+    <section class="col-3 bg-black" style="height: 300px"></section>
   </section>
+    <section class="row">
+        <section class="col-12 bg-warning" style="height: 300px"></section>
+    </section>
 </section>
 <script src="../assets/bootstrap/js/bootstrap.js"></script>
 </body>
